examples/tests/invalid/resource_access_field_as_method.w
class SomeResource {
    name: str;
    init() {
    }
}

let x = new SomeResource();
x.name();